language/move-lang/tests/move_check/parser/expr_abort_missing_value.exp
error: 

   ┌── tests/move_check/parser/expr_abort_missing_value.move:5:5 ───
   │
 5 │     }
   │     - Expected an expression term
   │     ^ Unexpected '}'
   │

